--- a/app/src/main/res/values-v27/themes.xml
+++ b/app/src/main/res/values-v27/themes.xml
@@ -1,5 +1,6 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme -->
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
+
     <style name="Base.Theme.PowerScout" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Make the app fullscreen -->
         <item name="android:windowFullscreen">true</item>
@@ -11,8 +12,6 @@
 
         <!-- Remove navigation bar shadow -->
         <item name="android:windowActionBarOverlay">true</item>
+        <item name="android:windowLayoutInDisplayCutoutMode">shortEdges</item>
     </style>
-
-    <!-- Theme applied to the app -->
-    <style name="Theme.PowerScout" parent="Base.Theme.PowerScout" />
 </resources>
