--- a/app/src/main/res/layout/activity_register2.xml
+++ b/app/src/main/res/layout/activity_register2.xml
@@ -48,7 +48,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="34dp"
-            android:text="User Name"
+            android:text="Phone"
             android:textColor="#000000"
             android:textSize="20sp"
             android:textStyle="bold" />
@@ -60,8 +60,8 @@
             android:layout_marginTop="10dp"
             android:background="@drawable/edittext_background"
             android:ems="10"
-            android:hint="Enter Your Username"
-            android:inputType="textPersonName"
+            android:hint="Enter Your Phone No."
+            android:inputType="phone"
             android:padding="12dp"
             android:textColor="#707070"
             android:textSize="18sp" />
@@ -71,7 +71,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="14dp"
-            android:text="Email"
+            android:text="Address"
             android:textColor="#000000"
             android:textSize="20sp"
             android:textStyle="bold" />
@@ -83,8 +83,8 @@
             android:layout_marginTop="10dp"
             android:background="@drawable/edittext_background"
             android:ems="10"
-            android:hint="Enter Your Email"
-            android:inputType="textPersonName"
+            android:hint="Enter Your Address"
+            android:inputType="text"
             android:padding="12dp"
             android:textColor="#707070"
             android:textSize="18sp" />
@@ -94,7 +94,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="14dp"
-            android:text="Name"
+            android:text="Password"
             android:textColor="#000000"
             android:textSize="20sp"
             android:textStyle="bold" />
@@ -106,8 +106,8 @@
             android:layout_marginTop="10dp"
             android:background="@drawable/edittext_background"
             android:ems="10"
-            android:hint="Enter Your Name"
-            android:inputType="textPersonName"
+            android:hint="Enter Your Password"
+            android:inputType="textPassword"
             android:padding="12dp"
             android:textColor="#707070"
             android:textSize="18sp" />
@@ -117,20 +117,20 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:text="Age"
+            android:text="Confirm Password"
             android:textColor="#000000"
             android:textSize="20sp"
             android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/editAge"
+            android:id="@+id/editTextPassword"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/edittext_background"
             android:ems="10"
-            android:hint="Enter Your Age"
-            android:inputType="text|number"
+            android:hint="Enter Your Confirm Password"
+            android:inputType="textPassword"
             android:padding="12dp"
             android:textColor="#707070"
             android:textSize="18sp" />
@@ -142,7 +142,7 @@
             android:layout_height="50dp"
             android:layout_marginTop="26dp"
             android:background="@drawable/button_background"
-            android:text="Next"
+            android:text="Register"
             android:textColor="#ffffff"
             android:textSize="25sp"
             android:textStyle="bold" />
