--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -123,6 +123,7 @@
                 android:background="#707070" />
         </LinearLayout>
 
+        <!-- Social Buttons-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -131,60 +132,14 @@
             android:orientation="horizontal"
             android:padding="16dp">
 
-            <!-- Facebook Button -->
-
             <!-- Google Button -->
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="50dp"
-                android:layout_marginEnd="8dp"
-                android:layout_weight="1"
-                android:background="@drawable/social_btn_background"
-                android:elevation="9dp"
-                android:gravity="center"
-                android:orientation="horizontal">
+            <com.google.android.gms.common.SignInButton
+                android:id="@+id/google_sign_in_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Sign in with Google"
+                android:layout_marginTop="8dp" />
 
-                <ImageView
-                    android:layout_width="44dp"
-                    android:layout_height="44dp"
-                    android:layout_margin="8dp"
-                    app:srcCompat="@drawable/facebook_icon" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="9dp"
-                    android:text="Facebook"
-                    android:textColor="#3b5998"
-                    android:textSize="14sp"
-                    android:textStyle="bold" />
-            </LinearLayout>
-<!-- Social Buttons-->
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="50dp"
-                android:layout_marginStart="8dp"
-                android:layout_weight="1"
-                android:background="@drawable/social_btn_background"
-                android:elevation="4dp"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_width="44dp"
-                    android:layout_height="44dp"
-                    android:layout_margin="8dp"
-                    app:srcCompat="@drawable/google_icon" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="9dp"
-                    android:text="Google"
-                    android:textColor="#3b5998"
-                    android:textSize="16sp"
-                    android:textStyle="bold" />
-            </LinearLayout>
         </LinearLayout>
 
         <androidx.appcompat.widget.AppCompatButton
