--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,16 +6,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F2F2F2"
-    tools:context=".LoginActivity">
+    tools:context=".Register1">
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"  android:layout_height="0dp"
         android:contentDescription="TODO"
         android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/bground" />
@@ -35,36 +34,12 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="580dp"
-        android:orientation="vertical"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="80dp"  android:orientation="vertical"
         android:padding="32dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0">
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="34dp"
-            android:text="User Name"
-            android:textColor="#000000"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
-        <EditText
-            android:id="@+id/textView3"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/edittext_background"
-            android:ems="10"
-            android:hint="Enter Your Username"
-            android:inputType="textPersonName"
-            android:padding="12dp"
-            android:textColor="#707070"
-            android:textSize="18sp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView1">
 
         <TextView
             android:id="@+id/textView4"
@@ -77,14 +52,14 @@
             android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/textView5"
+            android:id="@+id/emailEditText"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/edittext_background"
             android:ems="10"
             android:hint="Enter Your Email"
-            android:inputType="textPersonName"
+            android:inputType="textEmailAddress"
             android:padding="12dp"
             android:textColor="#707070"
             android:textSize="18sp" />
@@ -94,20 +69,20 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="14dp"
-            android:text="Name"
+            android:text="Password"
             android:textColor="#000000"
             android:textSize="20sp"
             android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/textView7"
+            android:id="@+id/passwordEditText"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/edittext_background"
             android:ems="10"
-            android:hint="Enter Your Name"
-            android:inputType="textPersonName"
+            android:hint="Enter Your Password"
+            android:inputType="textPassword"
             android:padding="12dp"
             android:textColor="#707070"
             android:textSize="18sp" />
@@ -117,34 +92,35 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:text="Age"
+            android:text="Confirm Password"
             android:textColor="#000000"
             android:textSize="20sp"
             android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/editAge"
+            android:id="@+id/confirmPasswordEditText"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/edittext_background"
             android:ems="10"
-            android:hint="Enter Your Age"
-            android:inputType="text|number"
+            android:hint="Confirm Your Password"
+            android:inputType="textPassword"
             android:padding="12dp"
             android:textColor="#707070"
             android:textSize="18sp" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/button2"
+            android:id="@+id/registerButton"
             style="@android:style/Widget.Button"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="26dp"
             android:background="@drawable/button_background"
-            android:text="Next"
+            android:text="Register"
             android:textColor="#ffffff"
             android:textSize="25sp"
             android:textStyle="bold" />
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
