--- a/app/src/main/res/values-v27/themes.xml
+++ b/app/src/main/res/values-v27/themes.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Base.Theme.PowerScout" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.PowerScout" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Make the app fullscreen -->
         <item name="android:windowFullscreen">true</item>
         <item name="android:windowTranslucentStatus">true</item>
