--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme -->
-    <style name="Base.Theme.PowerScout" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.PowerScout" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Make the app fullscreen -->
         <item name="android:windowFullscreen">true</item>
         <item name="android:windowTranslucentStatus">true</item>
@@ -8,7 +8,6 @@
         <!-- Transparent status bar -->
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:colorPrimary">@android:color/transparent</item>
-
         <!-- Remove navigation bar shadow -->
         <item name="android:windowActionBarOverlay">true</item>
     </style>
