--- a/app/src/main/res/layout/activity_complete_info1.xml
+++ b/app/src/main/res/layout/activity_complete_info1.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:openDrawer="start"
-    tools:context=".activity_update_info3">
+    tools:context=".activity_update_info2">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -44,24 +44,24 @@
                         android:id="@+id/image1"
                         android:layout_width="120dp"
                         android:layout_height="120dp"
-                        android:layout_marginTop="80dp"
+                        android:layout_marginTop="88dp"
                         android:scaleType="centerCrop"
-                        app:layout_constraintStart_toStartOf="parent"
+                        android:src="@drawable/profile"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        android:src="@drawable/profile"/>
+                        app:layout_constraintHorizontal_bias="0.498"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
-                    <!-- User Name -->
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="220dp"
+                        android:layout_marginTop="228dp"
                         android:text="Aniruddha Dabade"
                         android:textColor="@color/white"
                         android:textSize="18sp"
                         android:textStyle="bold"
-                        app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -87,22 +87,22 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="20dp"
-                            android:text="Edit Profile"
+                            android:text="Complete Profile"
                             android:textAlignment="center"
                             android:textColor="@color/blue"
-                            android:textSize="36sp"
+                            android:textSize="30sp"
                             android:textStyle="bold" />
 
                         <EditText
                             android:id="@+id/editEmail"
                             android:layout_width="match_parent"
                             android:layout_height="50dp"
-                            android:layout_marginTop="5dp"
+                            android:layout_marginTop="10dp"
                             android:background="@drawable/lavender_border"
                             android:gravity="center_vertical"
-                            android:drawableLeft="@drawable/baseline_age"
-                            android:hint="Age"
-                            android:inputType="number"
+                            android:drawableLeft="@drawable/ic_baseline_person_24"
+                            android:hint="First Name"
+                            android:inputType="text"
                             android:paddingStart="16dp"
                             android:textColor="@color/grey" />
 
@@ -110,11 +110,11 @@
                             android:id="@+id/editUsername"
                             android:layout_width="match_parent"
                             android:layout_height="50dp"
-                            android:layout_marginTop="20dp"
+                            android:layout_marginTop="15dp"
                             android:background="@drawable/lavender_border"
+                            android:drawableLeft="@drawable/ic_baseline_person_24"
                             android:gravity="center_vertical"
-                            android:drawableLeft="@drawable/baseline_add_location_24"
-                            android:hint="Address"
+                            android:hint="Last Name"
                             android:inputType="text"
                             android:paddingStart="16dp"
                             android:textColor="@color/grey" />
@@ -123,12 +123,12 @@
                             android:id="@+id/editPassword"
                             android:layout_width="match_parent"
                             android:layout_height="50dp"
-                            android:layout_marginTop="20dp"
+                            android:layout_marginTop="15dp"
                             android:background="@drawable/lavender_border"
                             android:gravity="center_vertical"
-                            android:drawableLeft="@drawable/ic_baseline_lightbulb"
-                            android:hint="No. Of Device"
+                            android:hint="Phone"
                             android:inputType="number"
+                            android:drawableLeft="@drawable/baseline_phone_24"
                             android:paddingStart="16dp"
                             android:textColor="@color/black" />
 
@@ -138,7 +138,7 @@
                             android:layout_height="60dp"
                             android:layout_marginTop="30dp"
                             android:backgroundTint="@color/blue"
-                            android:text="Update"
+                            android:text="Next"
                             android:textColor="@color/white"
                             android:textSize="18sp"
                             app:cornerRadius="20dp" />
@@ -152,8 +152,6 @@
 
         </ScrollView>
     </FrameLayout>
-
-
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigationView"
         android:layout_width="wrap_content"
@@ -164,3 +162,4 @@
         app:menu="@menu/drawer_items"/>
 
 </androidx.drawerlayout.widget.DrawerLayout>
+
