--- a/app/src/main/res/layout/activity_complete_info3.xml
+++ b/app/src/main/res/layout/activity_complete_info3.xml
@@ -87,10 +87,10 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="20dp"
-                            android:text="Edit Profile"
+                            android:text="Complete Profile"
                             android:textAlignment="center"
                             android:textColor="@color/blue"
-                            android:textSize="36sp"
+                            android:textSize="30sp"
                             android:textStyle="bold" />
 
                         <EditText
@@ -100,9 +100,8 @@
                             android:layout_marginTop="5dp"
                             android:background="@drawable/lavender_border"
                             android:gravity="center_vertical"
-                            android:drawableLeft="@drawable/baseline_age"
-                            android:hint="Age"
-                            android:inputType="number"
+                            android:hint="Device Name"
+                            android:inputType="text"
                             android:paddingStart="16dp"
                             android:textColor="@color/grey" />
 
@@ -113,8 +112,7 @@
                             android:layout_marginTop="20dp"
                             android:background="@drawable/lavender_border"
                             android:gravity="center_vertical"
-                            android:drawableLeft="@drawable/baseline_add_location_24"
-                            android:hint="Address"
+                            android:hint="Device Capacity"
                             android:inputType="text"
                             android:paddingStart="16dp"
                             android:textColor="@color/grey" />
@@ -126,9 +124,8 @@
                             android:layout_marginTop="20dp"
                             android:background="@drawable/lavender_border"
                             android:gravity="center_vertical"
-                            android:drawableLeft="@drawable/ic_baseline_lightbulb"
-                            android:hint="No. Of Device"
-                            android:inputType="number"
+                            android:hint="Device Brand Name"
+                            android:inputType="text"
                             android:paddingStart="16dp"
                             android:textColor="@color/black" />
 
@@ -138,7 +135,7 @@
                             android:layout_height="60dp"
                             android:layout_marginTop="30dp"
                             android:backgroundTint="@color/blue"
-                            android:text="Update"
+                            android:text="Save"
                             android:textColor="@color/white"
                             android:textSize="18sp"
                             app:cornerRadius="20dp" />
@@ -152,7 +149,6 @@
 
         </ScrollView>
     </FrameLayout>
-
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigationView"
