--- a/app/src/main/res/layout/activity_drawer_header.xml
+++ b/app/src/main/res/layout/activity_drawer_header.xml
@@ -34,7 +34,9 @@
         android:textSize="15sp"
         android:textStyle="bold" />
 
+
     <TextView
+        android:id="@+id/textUserEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="User Email"
