--- a/app/src/main/res/layout/activity_complete_info1.xml
+++ b/app/src/main/res/layout/activity_complete_info1.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawerLayout"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
@@ -53,10 +53,11 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
+                        android:id="@+id/tvUserName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="228dp"
-                        android:text="Aniruddha Dabade"
+                        android:text="Hi, User"
                         android:textColor="@color/white"
                         android:textSize="18sp"
                         android:textStyle="bold"
