--- a/app/src/main/res/layout/activity_complete_info3.xml
+++ b/app/src/main/res/layout/activity_complete_info3.xml
@@ -53,10 +53,11 @@
 
                     <!-- User Name -->
                     <TextView
+                        android:id="@+id/textUserName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="220dp"
-                        android:text="Aniruddha Dabade"
+                        android:text="User Name"
                         android:textColor="@color/white"
                         android:textSize="18sp"
                         android:textStyle="bold"
