--- a/app/src/main/res/layout/activity_update_info1.xml
+++ b/app/src/main/res/layout/activity_update_info1.xml
@@ -56,10 +56,10 @@
 
                         <!-- User Name -->
                         <TextView
+                            android:id="@+id/userNameTextView"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="220dp"
-                            android:text="Aniruddha Dabade"
                             android:textColor="@color/white"
                             android:textSize="18sp"
                             android:textStyle="bold"
@@ -141,7 +141,7 @@
                                 android:layout_height="60dp"
                                 android:layout_marginTop="30dp"
                                 android:backgroundTint="@color/blue"
-                                android:text="Next"
+                                android:text="Save"
                                 android:textColor="@color/white"
                                 android:textSize="18sp"
                                 app:cornerRadius="20dp"/>
