--- a/app/src/main/res/layout/activity_update_info2.xml
+++ b/app/src/main/res/layout/activity_update_info2.xml
@@ -53,6 +53,7 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
+                        android:id="@+id/userNameTextView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="228dp"
@@ -94,7 +95,7 @@
                             android:textStyle="bold" />
 
                         <EditText
-                            android:id="@+id/editEmail"
+                            android:id="@+id/editFirstName"
                             android:layout_width="match_parent"
                             android:layout_height="50dp"
                             android:layout_marginTop="10dp"
@@ -107,7 +108,7 @@
                             android:textColor="@color/grey" />
 
                         <EditText
-                            android:id="@+id/editUsername"
+                            android:id="@+id/editLastName"
                             android:layout_width="match_parent"
                             android:layout_height="50dp"
                             android:layout_marginTop="15dp"
@@ -120,7 +121,7 @@
                             android:textColor="@color/grey" />
 
                         <EditText
-                            android:id="@+id/editPassword"
+                            android:id="@+id/editPhone"
                             android:layout_width="match_parent"
                             android:layout_height="50dp"
                             android:layout_marginTop="15dp"
