--- a/app/src/main/res/layout/activity_update_info3.xml
+++ b/app/src/main/res/layout/activity_update_info3.xml
@@ -53,10 +53,11 @@
 
                     <!-- User Name -->
                     <TextView
+                        android:id="@+id/userName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="220dp"
-                        android:text="Aniruddha Dabade"
+                        android:text="User Name"
                         android:textColor="@color/white"
                         android:textSize="18sp"
                         android:textStyle="bold"
@@ -94,7 +95,7 @@
                             android:textStyle="bold" />
 
                         <EditText
-                            android:id="@+id/editEmail"
+                            android:id="@+id/editAge"
                             android:layout_width="match_parent"
                             android:layout_height="50dp"
                             android:layout_marginTop="5dp"
@@ -107,7 +108,7 @@
                             android:textColor="@color/grey" />
 
                         <EditText
-                            android:id="@+id/editUsername"
+                            android:id="@+id/editAddress"
                             android:layout_width="match_parent"
                             android:layout_height="50dp"
                             android:layout_marginTop="20dp"
@@ -120,7 +121,7 @@
                             android:textColor="@color/grey" />
 
                         <EditText
-                            android:id="@+id/editPassword"
+                            android:id="@+id/editedevice"
                             android:layout_width="match_parent"
                             android:layout_height="50dp"
                             android:layout_marginTop="20dp"
