--- a/app/src/main/res/layout/dialog_success.xml
+++ b/app/src/main/res/layout/dialog_success.xml
@@ -12,7 +12,7 @@
     <ImageView
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:src="@drawable/ic_success"
+        android:src="@drawable/ic_check"
         android:layout_marginBottom="10dp"/>
 
     <TextView
