--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,12 @@
     <color name="lavender">#8692f7</color>
     <color name="grey">#ff424242</color>
     <color name="light_blue">#77A6CC</color>
+    <color name="gray">#757575</color>
+    <color name="light_blue2">#A0CAEB</color>
+    <color name="light_grey">#A6B6C3</color>
+    <color name="light_gray">#F8F9FA</color>
+    <color name="dark_gray">#333333</color>
+
+
+
 </resources>
